# LekoAIFinance

./: .env.example  .gitignore  GEMINI.md  README.md  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
api/: telegram.py
architecture/: pop_camada2_llm.md  pop_camada3_dados.md  pop_deploy_vercel.md  pop_fluxo_mensagem.md
tools/: __init__.py  db_manager.py  llm_router.py  message_handler.py  telegram_bot.py  test_supabase.py
