[project]
name = "lekoaifinance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "supabase==2.31.0",
    "python-telegram-bot==22.7",
    "python-dotenv",
    "groq==1.4.0",
]

# Nao ha pacote Python para buildar (apenas funcoes serverless + scripts);
# impede o uv de tentar instalar o proprio projeto como um pacote.
[tool.uv]
package = false

[tool.vercel]
entrypoint = "api.telegram:handler"
